syntax = "proto3";

package registry;

option go_package = "./proto";

message Service {
  string id = 1;
  string name = 2;
  string host = 3;
  int32 port = 4;
}

message CommonResponse {
  bool success = 1;
  string message = 2;
}

message RegisterRequest {
  Service service = 1;
}

message RegisterResponse {
  CommonResponse response = 1;
  string service_id = 2;
}

message DiscoverRequest {
  string service_name = 1;
}

message DiscoverResponse {
  CommonResponse response = 1;
  repeated Service services = 2;
}

service ServiceRegistry {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Discover(DiscoverRequest) returns (DiscoverResponse) {}
}
